--- a/styles.css
+++ b/styles.css
@@ -68,12 +68,13 @@ body {
 
 .slider-btns {
   display: none;
+  z-index: 9;
 }
 
 .slider-btns button {
   position: absolute;
   top: 0;
-  width: 2rem;
+  width: 3rem;
   height: 100%;
   cursor: pointer;
 }
