add: first init

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,11 @@ body {
 }
 
 .slider-btns button {
-  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Standard */
   position: absolute;
   top: 0;
   width: 3rem;
