--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,9 @@ body {
   --height-img-mobile: 100px;
   --height-img-desktop: 214px;
 
+  --loader-color-ec: #cf9f0d;
+  --loader-color-gestion: #b04355;
+
   margin: auto;
   max-width: 1920px;
   overflow: hidden;
@@ -54,6 +57,18 @@ body {
   border: 4px solid #727272;
   border-color: #727272 transparent #727272 transparent;
   animation: animate-loader 1.2s linear infinite;
+}
+
+.slider-container.elcomercio .slider-loader::after {
+  border: 4px solid var(--loader-color-ec);
+  border-color: var(--loader-color-ec) transparent var(--loader-color-ec)
+    transparent;
+}
+
+.slider-container.gestion .slider-loader::after {
+  border: 4px solid var(--loader-color-gestion);
+  border-color: var(--loader-color-gestion) transparent
+    var(--loader-color-gestion) transparent;
 }
 
 .slider-wrapper {
